Add linter and sonar cloud checks